atualização e criação de novo ex

--- a/exercicios/ex023/index.html
+++ b/exercicios/ex023/index.html
@@ -28,6 +28,7 @@
 <body>
 
   <h1>TABELA</h1>
+  <p><a href="tabela002.html">TABELA 002</a></p>
   <!-- Hierarquia de tabelas SIMPLES
     TABLE= tabela
       TABLE ROW (TR)= linha de tabela
